[package]
name = "bri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
platforms = { path = "../platforms" }
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"

thiserror = "1.0.56"
openssl = { version = "0.10", features = ["vendored"] }